# RedditVideoMakerBot

./: .config.template.toml  .dockerignore  .env  .env-template  .env.template  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  GUI.py  Install.bat  LICENSE  README.md  StartAll.bat  betterinstaller.py  build.sh  cli.py  config.toml  env.template  final_video.py  generate_long_video.py  generate_shorts.py  index.html  install.sh  installer.0.1.bat  main.py  ptt.py  pyproject.toml  requirements.txt  restart.py  run.bat  run.sh  screenshot_downloader.py  setup.py  setup_program.py  subreddit.py  upload.bat  upload.py  (+1 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  docker-publish.yml
GUI/: GUI.py  backgrounds.html  index.html  layout.html  settings.html
TTS/: GTTS.py  POLLY.py  TikTok.py  aws_polly.py  azuretts.py  common.py  elevenlabs.py  engine_wrapper.py  pyttsx.py  streamlabs_polly.py  swapper.py  unreal_speech.py
cli/: Cargo.toml  cli-main.py
examples/: ValidOptionsTTS.txt
reddit/: askreddit.py  subreddit.py
results/: README.md  first_time.py  test.py  upload_video.py
tts/: aws_polly.py  engine_wrapper.py  example_tts.py  google_translate.py  google_translate_tts.py
upload/: youtube.py
utils/: .config.template.toml  CONSTANTS.py  acronyms.json  ai_methods.py  background_audios.json  background_videos.json  backgrounds.json  capcut.py  chatgpt.py  checker.py  cleanup.py  common.py  compressor.py  config.py  config.temp.toml  console.py  envUpdate.py  envUpdateWin.ps1  ffmpeg.py  (+24 more)
(+39 files in other folders)
