[tool.poetry]
name = "redditvideomakerbot"
version = "2.3.0"
description = "Create Reddit Videos with just one command"
authors = ["elebumm <hi@lewismenelaws.com>"]
license = "GPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.24.24"
botocore = "1.27.24"
gTTS = "2.2.4"
moviepy = "1.0.3"
playwright = "1.23.0"
praw = "7.6.0"
pytube = "12.1.0"
requests = "2.28.1"
rich = "12.4.4"
toml = "0.10.2"
translators = "5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
